Fix word break in impressum

--- a/src/common/Section/Section.css
+++ b/src/common/Section/Section.css
@@ -1,6 +1,7 @@
 .section > h1 {
   letter-spacing: var(--letterSpacingLg);
   font-size: 2.5rem;
+  word-break: break-word;
 }
 
 .section-xs > h1 {
